--- a/AesGcm256Pbkdf2StringEncryption/aesgcm256pbkdf2stringencryptionwebcrypto.html
+++ b/AesGcm256Pbkdf2StringEncryption/aesgcm256pbkdf2stringencryptionwebcrypto.html
@@ -197,6 +197,9 @@ function decryptDataCpc (form) {
 <p>
   CiphertextCpc: <input type="text" name="ciphertextCpc" id="ciphertextCpc" size="250" />
 </p>
+<p>
+  Ciphertext is (Base64) salt : (Base64) nonce : (Base64) ciphertext : (Base64) gcmTag
+</p>
 <hr>
 <p>
   <INPUT TYPE="button" NAME="button" Value="decrypt data" onClick="decryptDataCpc(this.form)">
