--- a/EcSignatureP256Sha256String/ecsignaturestringsign.html
+++ b/EcSignatureP256Sha256String/ecsignaturestringsign.html
@@ -36,7 +36,7 @@ MEECAQAwEwYHKoZIzj0CAQYIKoZIzj0DAQcEJzAlAgEBBCAU2f8tzo99Z1HoxJlY96yXUhFY5vppVjw1
 			<hr>
         </section>
 	  <p>
-  signature (in Base64 encoding):<br>
+  signature (will be in IEEE P1363 = R|S = raw format and in Base64 encoding):<br>
   <textarea name="signatureBase64" id="signatureBase64" form= "myform" rows="4" cols="64">the signature in Base64 encoding comes here...</textarea>
 		</div>
 </p>
