--- a/EcSignatureP256Sha256String/ecsignaturestringverification.html
+++ b/EcSignatureP256Sha256String/ecsignaturestringverification.html
@@ -26,7 +26,7 @@ MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzb7yAFWup6iDqJiEq764rAumsV2MrspZxaP3WGpwHaC4
 					 <hr>
             <br>
 		 
-            Enter the signature to verify:<br><br>
+            Enter the signature to verify (the signature has to be in IEEE-P1363 = R|S = raw format and base64 encoded):<br><br>
             <textarea name="spki-message" id="spki-message" form="myform" rows="4" cols="64">j6oY538oBKJ2H5xrt8ObLCjT4F2TjKt6DhAu460192PaGiDKs6O4yU3e27hKAbMzZcke2pHE+mPVEYu3CqR1sg==</textarea>
             <hr><br>
             <b>Instructions:</b><br>
