--- a/readme3.html
+++ b/readme3.html
@@ -525,7 +525,7 @@ based on dark.css by Vladimir Epifanov
 </thead>
 <tbody>
 <tr>
-<td><a href="docs/generate_aes_key.md">generate a 32 byte long AES key</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_aes_key.md">generate a 32 byte long AES key</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -534,7 +534,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 </tr>
 <tr>
-<td><a href="docs/generate_initvector.md">generate a 16 byte long initvector</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_initvector.md">generate a 16 byte long initvector</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -543,7 +543,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 </tr>
 <tr>
-<td><a href="docs/generate_nonce.md">generate a 12 byte long nonce</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_nonce.md">generate a 12 byte long nonce</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -848,7 +848,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td style="text-align: center;">🔜</td>
+<td style="text-align: center;">✅</td>
 </tr>
 </tbody>
 </table>
@@ -1025,6 +1025,10 @@ based on dark.css by Vladimir Epifanov
 <tr>
 <td><a href="rsa_signature_file_openssl.md">RSA file signature with PKCS#1.5 padding</a></td>
 <td>the signature and verification is compatible with solutions in  <a href="rsa_signature_string.md">RSA string signature with PKCS#1.5 padding</a></td>
+</tr>
+<tr>
+<td><a href="rsa_signature_pss_file_openssl.md">RSA file signature with PSS padding</a></td>
+<td>the signature and verification is compatible with solutions in  <a href="rsa_signature_pss_string.md">RSA string signature with PSS padding</a></td>
 </tr>
 <tr>
 <td><a href="docs/ecdsa_signature_file_openssl.md">Elliptic curve file signature DER encoding</a></td>
