--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </thead>
 <tbody>
 <tr>
-<td><a href="docs/generate_aes_key.md">generate a 32 byte long AES key</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/generate_aes_key.md">generate a 32 byte long AES key</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
