--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;"></td>
 </tr>
 <tr>
-<td><a href="libsodium_cryptobox_encryption_string.md">Libsodium crypto box authenticated hybrid string encryption</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_cryptobox_encryption_string.md">Libsodium crypto box authenticated hybrid string encryption</a></td>
 <td>encrypts a string on basis of a <strong>X25519 curve</strong> key exchange, using the <strong>XSalsa20 stream cipher</strong> for encryption and the <strong>Poly1305 MAC</strong> for authentication</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
