--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;"></td>
 </tr>
 <tr>
-<td><a href="argon2.md">Argon 2 password derivation function</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/argon2.md">Argon 2 password derivation function</a></td>
 <td>derives a password from a passphrase using the &quot;modern&quot; Argon2id algorithm</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
