--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 </tr>
 <tr>
-<td><a href="argon2_parameter.md">Argon 2 parameter</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/argon2_parameter.md">Argon 2 parameter</a></td>
 <td>describes the parameters used in Argon 2 algorithm</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
