--- a/LibsodiumSealedCryptoboxEncryptionString/libsodiumsealedcryptoboxencryptionfull.html
+++ b/LibsodiumSealedCryptoboxEncryptionString/libsodiumsealedcryptoboxencryptionfull.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Libsodium sealed crypto box hybrid string encryption</title>
+	<style>
+		body {background-color: powderblue;}
+		h1 {color: blue;}
+		h2 {font-size: 200%;}
+		p {font-size: 150%; }
+		button {height: 100%; font-size: 150%;}
+		textarea {font-size: 150%;}
+		input[type="text"] {font-size: 100%; }
+	</style>	
 </head>
 <body>
 <h1>Libsodium sealed crypto box hybrid string encryption</h1>
 <hr><p>
-	<b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
+<b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_sealedcryptobox_encryption_string.md"  target="_blank">
+my webpage <b>Libsodium sealed crypto box authenticated hybrid string encryption</b></a><br>
 </p><hr>
 <h2>Encryption</h2>
-<p>
-	For encryption you need the public key from the one you are sending the data to.
-</p>
-<p>Insert recipient's (party B) Public Key (in Base64 encoding):<br><br>
-	<textarea name="publicKeyBBase64" id="publicKeyBBase64" rows="2" cols="50">jVSuHjVH47PMbMaAxL5ziBS9/Z0HQK6TJLw9X3Jw6yg=</textarea>
-</p>
-<p>Insert the string you like to encrypt:<br><br>
-	<textarea name="plaintext" id="plaintext" rows="5" cols="100">The quick brown fox jumps over the lazy dog</textarea>
-</p>
-<p>
-press the encrypt button to proceed:
-	<button onclick="encryptSealed()">encrypt</button> 
-</p>
-<p>encrypted (ciphertext) in Base64 encoding:<br><br>
-	<textarea name="ciphertextBase64" id="ciphertextBase64" rows="6" cols="100">the ciphertext comes here...</textarea><br>
-	The output is (Base64) ciphertext
-</p>
+<p>For encryption you need the public key from the one you are sending the data to.</p>
+<p>Insert recipient's (party B) Public Key (in Base64 encoding):</p>
+<textarea name="publicKeyBBase64" id="publicKeyBBase64" rows="2" cols="40">jVSuHjVH47PMbMaAxL5ziBS9/Z0HQK6TJLw9X3Jw6yg=</textarea>
+<p>Insert the string you like to encrypt:</p>
+<textarea name="plaintext" id="plaintext" rows="5" cols="40">The quick brown fox jumps over the lazy dog</textarea>
+<p>press the encrypt button to proceed:</p>
+<button onclick="encryptSealed()">encrypt</button> 
+<p>encrypted (ciphertext) in Base64 encoding:</p>
+<textarea name="ciphertextBase64" id="ciphertextBase64" rows="6" cols="40">the ciphertext comes here...</textarea><br>
+<p>The output is (Base64) ciphertext</p>
+
 <h2>Decryption</h2>
-<p>
-	For decryption you need receipient's (party B) secret key.
-</p>
-<p>Insert your (party B) Secret Key (in Base64 encoding):<br><br>
-	<textarea name="secretKeyBBase64" id="secretKeyBBase64" rows="2" cols="50">yNmXR5tfBXA/uZjanND+IYgGXlrFnrdUiUXesI4fOlM=</textarea>
-</p>
-<p>Insert the ciphertext you like to decrypt or press the "sample data" button:
-	<button onclick="sampledata()">sample data</button> 
-	<br><br>
-	<textarea name="ciphertextDecryptionBase64" id="ciphertextDecryptionBase64" rows="5" cols="100">The ciphertext comes here...</textarea><br>
-	The input is (Base64) ciphertext
-</p>
-<p>
-press the decrypt button to proceed:
-	<button onclick="decryptSealed()">decrypt</button> 
-</p>
-<p>decrypted plaintext:<br><br>
-	<textarea name="decryptedtext" id="decryptedtext" rows="6" cols="100">the decryptedtext comes here...</textarea>
-	
-</p>
-<hr><p>
-	<b>Technical note: this program uses the X25519 key exchange algorithm, XSalsa20 stream cipher for encryption and Poly1305 MAC for authenticated encryption.</b>
-</p><hr>
-<script src="http://javacrypto.bplaced.net/cpclibsodium/nacl.min.js"></script>
-<script src="http://javacrypto.bplaced.net/cpclibsodium/nacl-util.min.js"></script>
-<script src="http://javacrypto.bplaced.net/cpclibsodium/sealedbox.web.js"></script>
+<p>For decryption you need receipient's (party B) secret key.</p>
+<p>Insert your (party B) Secret Key (in Base64 encoding):</p>
+<textarea name="secretKeyBBase64" id="secretKeyBBase64" rows="2" cols="40">yNmXR5tfBXA/uZjanND+IYgGXlrFnrdUiUXesI4fOlM=</textarea>
+<p>Insert the ciphertext you like to decrypt or press the "sample data" button:</p>
+<button onclick="sampledata()">sample data</button> 
+<br><br>
+<textarea name="ciphertextDecryptionBase64" id="ciphertextDecryptionBase64" rows="5" cols="40">The ciphertext comes here...</textarea><br>
+<p>The input is (Base64) ciphertext</p>
+<p>press the decrypt button to proceed:</p>
+<button onclick="decryptSealed()">decrypt</button> 
+<p>decrypted plaintext:</p>
+<textarea name="decryptedtext" id="decryptedtext" rows="6" cols="40">the decryptedtext comes here...</textarea>
+<hr><p>	<b>Technical note: this program uses the X25519 key exchange algorithm, XSalsa20 stream cipher for encryption and Poly1305 MAC for authenticated encryption.</b></p><hr>
+<script src="http://javacrypto.bplaced.net/cpcjs/sealedcryptobox/nacl.min.js"></script>
+<script src="http://javacrypto.bplaced.net/cpcjs/sealedcryptobox/nacl-util.min.js"></script>
+<script src="http://javacrypto.bplaced.net/cpcjs/sealedcryptobox/sealedbox.web.js"></script>
 <script>
-// is running on http://javacrypto.bplaced.net/cpclibsodium/libsodiumsealedcryptoboxencryptionfull.html
 
 function encryptSealed() {
 	var publicKeyBBase64 = document.getElementById('publicKeyBBase64').value;
