--- a/LibsodiumSecretboxEncryptionString/libsodiumsecretboxencryptionstring.html
+++ b/LibsodiumSecretboxEncryptionString/libsodiumsecretboxencryptionstring.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Libsodium secret box authenticated string encryption with a random key</title>
+	<style>
+		body {background-color: powderblue;}
+		h1 {color: blue;}
+		h2 {font-size: 200%;}
+		p {font-size: 150%; }
+		button {height: 100%; font-size: 150%;}
+		textarea {font-size: 150%;}
+		input[type="text"] {font-size: 100%; }
+	</style>
 </head>
 <body>
 <h1>Libsodium secret box authenticated string encryption with a random key</h1>
 <hr><p>
-	<b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
+<b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/libsodium_secretbox_encryption_string.md"  target="_blank">
+my webpage <b>Libsodium secret box authenticated string encryption</b></a><br>
 </p><hr>
 <h2>Encryption</h2>
-<p>
-	For encryption you need your encryption key in Base64 encoding.
-</p>
-<p>Insert your encryption key (in Base64 encoding):<br><br>
-	<textarea name="encryptionKeyBase64" id="encryptionKeyBase64" rows="2" cols="50">c9cVXonI1GOHstGY8wUnAiNQ72bItMgcJTwv5Vjs95U=</textarea>
-	<button onclick="generateKey()">generate a new encryption key</button>
-</p>
-<p>Insert the string you like to encrypt:<br><br>
-	<textarea name="plaintext" id="plaintext" rows="5" cols="100">The quick brown fox jumps over the lazy dog</textarea>
-</p>
-<p>
-press the encrypt button to proceed:
-	<button onclick="encrypt()">encrypt</button> 
-</p>
-<p>encrypted (ciphertext) in Base64 encoding:<br><br>
-	<textarea name="ciphertextBase64" id="ciphertextBase64" rows="6" cols="100">the ciphertext comes here...</textarea><br>
-	The output is (Base64) nonce : (Base64) ciphertext
-</p>
+<p>For encryption you need your encryption key in Base64 encoding.</p>
+<p>Insert your encryption key (in Base64 encoding):</p>
+<textarea name="encryptionKeyBase64" id="encryptionKeyBase64" rows="2" cols="40">c9cVXonI1GOHstGY8wUnAiNQ72bItMgcJTwv5Vjs95U=</textarea>
+<br>
+<p>or</p> <button onclick="generateKey()">generate a new encryption key</button>
+<p>Insert the string you like to encrypt:</p>
+<textarea name="plaintext" id="plaintext" rows="5" cols="40">The quick brown fox jumps over the lazy dog</textarea>
+<p>press the encrypt button to proceed:</p>
+<button onclick="encrypt()">encrypt</button> 
+<p>encrypted (ciphertext) in Base64 encoding:</p>
+<textarea name="ciphertextBase64" id="ciphertextBase64" rows="6" cols="40">the ciphertext comes here...</textarea><br>
+<p>The output is (Base64) nonce : (Base64) ciphertext</p>
+
 <h2>Decryption</h2>
-<p>
-	For decryption you need encryption key in Base64 encoding.
-</p>
-<p>Insert your encryption key (in Base64 encoding):<br><br>
-	<textarea name="decryptionKeyBase64" id="decryptionKeyBase64" rows="2" cols="50">c9cVXonI1GOHstGY8wUnAiNQ72bItMgcJTwv5Vjs95U=</textarea>
-</p>
-<p>Insert the ciphertext you like to decrypt or press the "sample data" button:
-	<button onclick="sampledata()">sample data</button> 
-	<br><br>
-	<textarea name="ciphertextDecryptionBase64" id="ciphertextDecryptionBase64" rows="5" cols="100">the ciphertext comes here...</textarea><br>
-	The input is (Base64) nonce : (Base64) ciphertext
-</p>
-<p>
-press the decrypt button to proceed:
-	<button onclick="decrypt()">decrypt</button> 
-</p>
-<p>decrypted plaintext:<br><br>
-	<textarea name="decryptedtext" id="decryptedtext" rows="6" cols="100">the decryptedtext comes here...</textarea>
-	
-</p>
-<hr><p>
-	<b>Technical note: this program uses the XSalsa20 stream cipher for encryption and Poly1305 MAC for authenticated encryption.</b>
-</p><hr>
-<script src="http://javacrypto.bplaced.net/cpclibsodium/nacl.min.js"></script>
-<script src="http://javacrypto.bplaced.net/cpclibsodium/nacl-util.min.js"></script>
+<p>For decryption you need encryption key in Base64 encoding.</p>
+<p>Insert your encryption key (in Base64 encoding):</p>
+<textarea name="decryptionKeyBase64" id="decryptionKeyBase64" rows="2" cols="40">c9cVXonI1GOHstGY8wUnAiNQ72bItMgcJTwv5Vjs95U=</textarea>
+<p>Insert the ciphertext you like to decrypt or press the "sample data" button:</p>
+<button onclick="sampledata()">sample data</button> 
+<br><br>
+<textarea name="ciphertextDecryptionBase64" id="ciphertextDecryptionBase64" rows="5" cols="40">the ciphertext comes here...</textarea><br>
+<p>The input is (Base64) nonce : (Base64) ciphertext</p>
+<p>press the decrypt button to proceed:</p>
+<button onclick="decrypt()">decrypt</button> 
+<p>decrypted plaintext:</p>
+<textarea name="decryptedtext" id="decryptedtext" rows="6" cols="40">the decryptedtext comes here...</textarea>
+<hr><p><b>Technical note: this program uses the XSalsa20 stream cipher for encryption and Poly1305 MAC for authenticated encryption.</b></p><hr>
+<script src="http://javacrypto.bplaced.net/cpcjs/secretbox/nacl.min.js"></script>
+<script src="http://javacrypto.bplaced.net/cpcjs/secretbox/nacl-util.min.js"></script>
 <script>
 const newNonce = () => nacl.randomBytes(nacl.secretbox.nonceLength);
 const newKey = () => nacl.randomBytes(nacl.secretbox.keyLength);
