--- a/AesGcm256Pbkdf2StringEncryption/aesgcm256pbkdf2stringencryptionwebcrypto.html
+++ b/AesGcm256Pbkdf2StringEncryption/aesgcm256pbkdf2stringencryptionwebcrypto.html
@@ -1,220 +1,218 @@
-<HTML>
+<!DOCTYPE html>
+<html lang="en">
 <HEAD>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <TITLE>AES GCM 256 String encryption with PBKDF2 derived key</TITLE>
+	<style>
+		body {background-color: powderblue;}
+		h1 {color: blue;}
+		h2 {font-size: 200%;}
+		p {font-size: 150%; }
+		button {height: 100%; font-size: 150%;}
+		textarea {font-size: 150%;}
+		input[type="text"] {font-size: 100%; }
+	</style>
+</HEAD>
+<BODY>
+<h1>AES GCM 256 String encryption with PBKDF2 derived key</h1>
+<hr><p><b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
+<br><br>Get more information about this program on <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_gcm_256_pbkdf2_string_encryption.md"  target="_blank">
+my webpage <b>AES GCM mode 256 PBKDF2 string encryption</b></a><br>
+</p><hr>
+
+<h2>Encryption</h2>
+<p>For encryption you need a password ("passphrase") and the plaintext to encrypt.</p>
+<p>Insert your password:</p>
+<textarea name="secretpassword" id="secretpassword" rows="2" cols="40">secret password</textarea>
+<p>Insert the string you like to encrypt:</p>
+<textarea name="plaintext" id="plaintext" rows="5" cols="40">The quick brown fox jumps over the lazy dog</textarea>
+<p>press the encrypt button to proceed:</p>
+<button onclick="encryptButton()">encrypt</button> 
+<p>encrypted (ciphertext) in Base64 encoding:</p>
+<textarea name="ciphertextBase64" id="ciphertextBase64" rows="6" cols="40">the ciphertext comes here...</textarea>
+<p>Ciphertext is (Base64) salt : (Base64) nonce : (Base64) ciphertext : (Base64) gcmTag</p>
+
+<h2>Decryption</h2>
+<p>For decryption you need a password ("passphrase") and the encrypted ciphertext.</p>
+<p>Insert your password:</p>
+<textarea name="secretpasswordDecryption" id="secretpasswordDecryption" rows="2" cols="40">the secret password comes here ...</textarea>
+<p>Insert encrypted text (ciphertext) in Base64 encoding or press the "sample data" button or press the "copy data from encryption" button:</p>
+<button onclick="sampledata()">sample data</button>  <button onclick="copydata()">copy data</button> <br><br>
+<textarea name="ciphertextDecryptionBase64" id="ciphertextDecryptionBase64" rows="6" cols="40">ciphertext in Base64 encoding comes here ...</textarea>
+<p>Ciphertext is (Base64) salt : (Base64) nonce : (Base64) ciphertext : (Base64) gcmTag</p>
+<p>press the decrypt button to proceed:</p>
+<button onclick="decryptButton()">decrypt</button><br>
+<p>decrypted plaintext:</p>
+<textarea name="decryptedtext" id="decryptedtext" rows="6" cols="40">the decryptedtext comes here...</textarea>
+<hr><p><b>Technical note: this program uses the PBKDF2 algorithm for key derivation and AES 256 GCM mode for encryption and authentication.</b></p><hr>
+</BODY>
 <SCRIPT LANGUAGE="JavaScript">
-
 var ciphertextComplete;
-
 // Utils
 const hexToBuf = hex => {
-  for (var bytes = [], c = 0; c < hex.length; c += 2)
-    bytes.push(parseInt(hex.substr(c, 2), 16));
-  return new Uint8Array(bytes);
+	for (var bytes = [], c = 0; c < hex.length; c += 2)
+	bytes.push(parseInt(hex.substr(c, 2), 16));
+	return new Uint8Array(bytes);
 };
 
 const bufToHex = buf => {
-  var byteArray = new Uint8Array(buf);
-  var hexString = "";
-  var nextHexByte;
+	var byteArray = new Uint8Array(buf);
+	var hexString = "";
+	var nextHexByte;
 
-  for (var i = 0; i < byteArray.byteLength; i++) {
-    nextHexByte = byteArray[i].toString(16);
-    if (nextHexByte.length < 2) {
-      nextHexByte = "0" + nextHexByte;
-    }
-    hexString += nextHexByte;
-  }
-  return hexString;
+	for (var i = 0; i < byteArray.byteLength; i++) {
+		nextHexByte = byteArray[i].toString(16);
+	if (nextHexByte.length < 2) {
+		nextHexByte = "0" + nextHexByte;
+	}
+	hexString += nextHexByte;
+	}
+	return hexString;
 };
 
 const strToBuf = str => new TextEncoder().encode(str);
 const bufToStr = str => new TextDecoder().decode(str);
 
 const strToB64 = str =>
-  btoa(
-    encodeURIComponent(str).replace(/%([0-9A-F]{2})/g, (match, p1) =>
-      String.fromCharCode("0x" + p1)
-    )
-  );
+	btoa(
+		encodeURIComponent(str).replace(/%([0-9A-F]{2})/g, (match, p1) =>
+		String.fromCharCode("0x" + p1)
+	)
+);
+
 const b64ToStr = str =>
-  decodeURIComponent(
-    Array.prototype.map
-      .call(
-        atob(str),
-        c => "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2)
-      )
-      .join("")
-  );
+	decodeURIComponent(
+		Array.prototype.map
+		.call(
+			atob(str),
+				c => "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2)
+		)
+	.join("")
+);
 
 const bufToB64 = buf =>
-  btoa(Array.prototype.map.call(buf, ch => String.fromCharCode(ch)).join(""));
+	btoa(Array.prototype.map.call(buf, ch => String.fromCharCode(ch)).join(""));
+
 const b64ToBuf = b64 => {
-  const binstr = atob(b64),
-    buf = new Uint8Array(binstr.length);
-  Array.prototype.forEach.call(binstr, (ch, i) => {
-    buf[i] = ch.charCodeAt(0);
-  });
-  return buf;
+	const binstr = atob(b64),
+	buf = new Uint8Array(binstr.length);
+	Array.prototype.forEach.call(binstr, (ch, i) => {
+		buf[i] = ch.charCodeAt(0);
+	});
+	return buf;
 };
 
 var concatBuffer = function(buffer1, buffer2) {
-  var tmp = new Uint8Array(buffer1.byteLength + buffer2.byteLength);
-  tmp.set(new Uint8Array(buffer1), 0);
-  tmp.set(new Uint8Array(buffer2), buffer1.byteLength);
-  return tmp.buffer;
+	var tmp = new Uint8Array(buffer1.byteLength + buffer2.byteLength);
+	tmp.set(new Uint8Array(buffer1), 0);
+	tmp.set(new Uint8Array(buffer2), buffer1.byteLength);
+	return tmp.buffer;
 };
 
 // Encrypt
 const encrypt = (data, key, iv, mode) =>
-  crypto.subtle
-    .importKey("raw", key, { name: mode }, true, ["encrypt", "decrypt"])
-    .then(bufKey => crypto.subtle.encrypt({ name: mode, iv }, bufKey, data));
+	crypto.subtle
+	.importKey("raw", key, { name: mode }, true, ["encrypt", "decrypt"])
+	.then(bufKey => crypto.subtle.encrypt({ name: mode, iv }, bufKey, data));
 
 // Decrypt
 const decrypt = (data, key, iv, mode) =>
-  crypto.subtle
-    .importKey("raw", key, { name: mode }, true, ["encrypt", "decrypt"])
-    .then(bufKey => crypto.subtle.decrypt({ name: mode, iv }, bufKey, data));
+	crypto.subtle
+	.importKey("raw", key, { name: mode }, true, ["encrypt", "decrypt"])
+	.then(bufKey => crypto.subtle.decrypt({ name: mode, iv }, bufKey, data));
 
 // PBKDF2
 const pbkdf2 = (password, salt, iterations, hash, mode) =>
-  crypto.subtle
-    .importKey("raw", password, { name: "PBKDF2" }, false, ["deriveKey"])
-    .then(baseKey =>
-      crypto.subtle.deriveKey(
-        { name: "PBKDF2", salt, iterations, hash },
-        baseKey,
-        { name: mode, length: 256 },
-        true,
-        ["encrypt", "decrypt"]
-      )
-    )
-    .then(key => crypto.subtle.exportKey("raw", key));
-
-  const encStr = (data, password) => {
-  const salt = crypto.getRandomValues(new Uint8Array(32));
-  const iv = crypto.getRandomValues(new Uint8Array(12));
-  const iterations = 15000;
-  const hash = "SHA-256";
-  const mode = "AES-GCM";
-
-  return pbkdf2(strToBuf(password), salt, iterations, hash, mode)
-    .then(keyBuf => encrypt(strToBuf(data), keyBuf, iv, mode))
-    .then(buf =>
-      btoa(
-        JSON.stringify({
-          hash,
-          mode,
-          iterations,
-          salt: bufToHex(salt),
-          iv: bufToHex(iv),
-          data: bufToHex(buf)
-        })
-      )
-    );
+	crypto.subtle
+	.importKey("raw", password, { name: "PBKDF2" }, false, ["deriveKey"])
+	.then(baseKey =>
+		crypto.subtle.deriveKey(
+			{ name: "PBKDF2", salt, iterations, hash },
+			baseKey,
+			{ name: mode, length: 256 },
+			true,
+			["encrypt", "decrypt"]
+		)
+	)
+	.then(key => crypto.subtle.exportKey("raw", key));
+	const encStr = (data, password) => {
+	const salt = crypto.getRandomValues(new Uint8Array(32));
+	const iv = crypto.getRandomValues(new Uint8Array(12));
+	const iterations = 15000;
+	const hash = "SHA-256";
+	const mode = "AES-GCM";
+	return pbkdf2(strToBuf(password), salt, iterations, hash, mode)
+	.then(keyBuf => encrypt(strToBuf(data), keyBuf, iv, mode))
+	.then(buf =>
+		btoa(
+			JSON.stringify({
+			hash,
+			mode,
+			iterations,
+			salt: bufToHex(salt),
+			iv: bufToHex(iv),
+			data: bufToHex(buf)
+		})
+		)
+	);
 };
 
 const decStrCpc = (salt, iv, data, password) => {
-  const iterations = 15000;
-  const hash = "SHA-256";
-  const mode = "AES-GCM";
-  //const { salt, iterations, hash, mode, iv, data } = JSON.parse(atob(raw));
-  return pbkdf2(strToBuf(password), salt, iterations, hash, mode)
-    .then(key => decrypt(data, key, iv, mode))
-    .then(buf => bufToStr(buf));
+	const iterations = 15000;
+	const hash = "SHA-256";
+	const mode = "AES-GCM";
+	//const { salt, iterations, hash, mode, iv, data } = JSON.parse(atob(raw));
+	return pbkdf2(strToBuf(password), salt, iterations, hash, mode)
+	.then(key => decrypt(data, key, iv, mode))
+	.then(buf => bufToStr(buf));
 };
 
-function encryptDataCpc (form) {
-  const ownPassword = document.getElementById("secretpassword").value;
-  const ownPlaintext = document.getElementById("plaintext").value;
-  encStr(ownPlaintext, ownPassword)
-  .then(enc => {
-	// split data
-	const { salt, iterations, hash, mode, iv, data } = JSON.parse(atob(enc));
-    const saltBase64 = bufToB64(hexToBuf(salt));
-	const nonceBase64 = bufToB64(hexToBuf(iv));
-	var dataBuf = hexToBuf(data);
-	var dataCiphertext = new Uint8Array(dataBuf.slice(0, (dataBuf.length-16)));
-	var dataGcmTag = new Uint8Array(dataBuf.slice((dataBuf.length-16), dataBuf.length));
-	const ciphertextBase64 = bufToB64(dataCiphertext);
-	const gcmTagBase64 = bufToB64(dataGcmTag);
-	const outputLine = saltBase64 + ':' + nonceBase64 + ':' + ciphertextBase64 + ':' + gcmTagBase64;	
-	document.getElementById("ciphertextCpc").value = outputLine;
-  })
-  .catch(console.error);
+function sampledata() {
+	document.getElementById('ciphertextDecryptionBase64').value = 'SrQanN89rwAvSO4/EWqdm1MakccfiH/xptF1LOlECrE=:QRqLuoLlkMG6FC9D:78rYU+RyAv/3+LIw4o80BZognlmcmmRrviHgXNjjMY85kJdWDz6UFFrA4w==:zNLE94FgEfgcHtTnjtkd6A==';
+	document.getElementById('secretpasswordDecryption').value = 'secret password';
 }
 
-function decryptDataCpc (form) {
-  const ownPassword = document.getElementById("secretpassword").value;
-  const ownCiphertext = document.getElementById("ciphertextCpc").value;
-  // split the string
-  var dataSplit = ownCiphertext.split(":");
-  var salt = b64ToBuf(dataSplit[0]);
-  var iv = b64ToBuf(dataSplit[1]);
-  var ciphertext = b64ToBuf(dataSplit[2]);
-  var gcmTag = b64ToBuf(dataSplit[3]);
-  var ciphertextWithGcmTag = concatBuffer(ciphertext, gcmTag);
-  decStrCpc(salt, iv, ciphertextWithGcmTag, ownPassword)
-  .then(dec => {
-    document.getElementById("decryptedtextCpc").value = dec;
-  })
-  .catch(console.error);
+function copydata() {
+	document.getElementById('ciphertextDecryptionBase64').value = document.getElementById('ciphertextBase64').value;
+	document.getElementById('secretpasswordDecryption').value = document.getElementById('secretpassword').value;
 }
 
-</SCRIPT>
-</HEAD>
-<BODY>
-<FORM NAME="myform" ACTION="" METHOD="GET">AES GCM 256 String encryption with PBKDF2 derived key<BR>
-<hr>
-<p>
-<b>Important note: this program is doing what it promises but the programming itself is of very poor quality and for demonstration purposes only. Never ever use this program as source for your own programs because there are a lot of conversions to get it run.</b>
-</p>
-<hr>
-<p>
-  Plaintext:
-  <input
-    type="text"
-    name="plaintext"
-    id="plaintext"
-    size="100"
-    value="The quick brown fox jumps over the lazy dog"
-  />
-</p>
-<p>
-  Secret password:
-  <input
-    type="text"
-    name="secretpassword"
-    id="secretpassword"
-    size="100"
-    value="secret password"
-  />
-</p>
-<hr>
-<p>
-  <INPUT TYPE="button" NAME="button" Value="encrypt data" onClick="encryptDataCpc(this.form)">
-</p>
-<p>
-  CiphertextCpc: <input type="text" name="ciphertextCpc" id="ciphertextCpc" size="250" />
-</p>
-<p>
-  Ciphertext is (Base64) salt : (Base64) nonce : (Base64) ciphertext : (Base64) gcmTag
-</p>
-<hr>
-<p>
-  <INPUT TYPE="button" NAME="button" Value="decrypt data" onClick="decryptDataCpc(this.form)">
-</p>
-<p>
-  DecryptedtextCpc:
-  <input
-    type="text"
-    name="decryptedtextCpc"
-    id="decryptedtextCpc"
-    size="100"
-    value="decrypted text"
-  />
-</p>
-<hr>
-</FORM>
-</BODY>
+function encryptButton() {
+	const ownPassword = document.getElementById("secretpassword").value;
+	const ownPlaintext = document.getElementById("plaintext").value;
+	encStr(ownPlaintext, ownPassword)
+		.then(enc => {
+		// split data
+		const { salt, iterations, hash, mode, iv, data } = JSON.parse(atob(enc));
+		const saltBase64 = bufToB64(hexToBuf(salt));
+		const nonceBase64 = bufToB64(hexToBuf(iv));
+		var dataBuf = hexToBuf(data);
+		var dataCiphertext = new Uint8Array(dataBuf.slice(0, (dataBuf.length-16)));
+		var dataGcmTag = new Uint8Array(dataBuf.slice((dataBuf.length-16), dataBuf.length));
+		const ciphertextBase64 = bufToB64(dataCiphertext);
+		const gcmTagBase64 = bufToB64(dataGcmTag);
+		const outputLine = saltBase64 + ':' + nonceBase64 + ':' + ciphertextBase64 + ':' + gcmTagBase64;	
+		document.getElementById("ciphertextBase64").value = outputLine;
+	})
+	.catch(console.error);
+}
+
+function decryptButton() {
+	const ownPassword = document.getElementById("secretpasswordDecryption").value;
+	const ownCiphertext = document.getElementById("ciphertextDecryptionBase64").value;
+	// split the string
+	var dataSplit = ownCiphertext.split(":");
+	var salt = b64ToBuf(dataSplit[0]);
+	var iv = b64ToBuf(dataSplit[1]);
+	var ciphertext = b64ToBuf(dataSplit[2]);
+	var gcmTag = b64ToBuf(dataSplit[3]);
+	var ciphertextWithGcmTag = concatBuffer(ciphertext, gcmTag);
+	decStrCpc(salt, iv, ciphertextWithGcmTag, ownPassword)
+		.then(dec => {
+		document.getElementById("decryptedtext").value = dec;
+	})
+	.catch(console.error);
+}
+</SCRIPT>	
 </HTML>
